# RL-Rubrics

./: .gitignore  CMakeLists.txt
src/: camera.c  camera.h  cube.c  cube.h  gl_loader.c  gl_loader.h  gpu_check.c  gpu_nn.c  gpu_nn.h  gpu_nn_test.c  gpu_train.c  gpu_train_viz.c  hud.c  hud.h  linmath.h  main.c  nn.c  nn.h  renderer.c  renderer.h  rng.c  rng.h  train.c  train_viz.c
